--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier --write \"**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "axios": "^0.21.4",
     "clsx": "^1.1.1",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
+    "react-compound-slider": "^3.3.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
