--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
+    "konva": "^8.1.3",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
     "react": "17.0.2",
     "react-compound-slider": "^3.3.1",
     "react-dom": "17.0.2",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-konva": "^17.0.2-5"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
