--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-compound-slider": "^3.3.1",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "react-konva": "^17.0.2-5"
+    "react-intersection-observer": "^8.32.1",
+    "react-konva": "^17.0.2-5",
+    "react-reveal": "^1.2.2",
+    "react-spring": "^9.2.4"
   },
   "devDependencies": {
     "@types/react": "17.0.20",
