--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
+    "framer-motion": "^4.1.17",
     "konva": "^8.1.3",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
