--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "axios": "^0.21.4",
     "clsx": "^1.1.1",
-    "framer-motion": "^4.1.17",
+    "d3": "^7.1.1",
+    "framer-motion": "^5.3.0",
     "konva": "^8.1.3",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
@@ -22,12 +23,15 @@
     "react-icons": "^4.2.0",
     "react-intersection-observer": "^8.32.1",
     "react-konva": "^17.0.2-5",
+    "react-laag": "^2.0.3",
     "react-reveal": "^1.2.2",
-    "react-spring": "^9.2.4"
+    "react-spring": "^9.3.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.1.0",
     "@types/react": "17.0.20",
     "autoprefixer": "^10.3.4",
+    "csv-loader": "^3.0.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "postcss": "^8.3.6",
