--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "konva": "^8.1.3",
     "next": "11.1.2",
     "nprogress": "^0.2.0",
+    "paper": "^0.12.15",
     "react": "17.0.2",
     "react-compound-slider": "^3.3.1",
     "react-dom": "17.0.2",
